Fix email form text overlap
Text was previously set to background color. If an
invalid email address was entered, the labelline would
retreat back into the form box overlapping with the user
input text. By setting the user input text to
transparent, this graphically bug is fixed.

--- a/style/index.css
+++ b/style/index.css
@@ -151,6 +151,7 @@ fieldset {
 
 input {
     position: absolute;
+    color: transparent;
     width: 100%;
     height: calc(var(--default-font-size)*2);
     outline: none;
